Compiler/src/main/java/Testing/Tests/SemanticTests/SymbolTable/failing/DuplicateVariable.ru
/? Descripción: caso de prueba que verifica que no se
/? declaren dos variables con igual nombre
/? Salida esperada:
/? ERROR: SEMÁNTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 10 | COLUMNA 5 | LA VARIABLE a YA ESTÁ DECLARADA

start{
Char a;
Int a;}